Font/text readability update and login page fix

--- a/styles/header_and_footer.css
+++ b/styles/header_and_footer.css
@@ -17,7 +17,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: Pixelify Sans;
+    /* font-family: Pixelify Sans; */
     font-size: 1.8rem;
     text-align: center;
     padding-right: 17px;
